# ros2_ws5

./: .gitignore  PLAN.md  m3_sim_logger.py  rs_controller_logger.py  run_localization.sh  run_m1_sim.sh  run_m2_sim.sh  run_m3_logger.sh  run_m3_sim.sh  run_mapviz.sh
src/.claude/: settings.json
src/control/control/: package.xml  setup.py
src/control/control/config/: config.yaml
src/control/control/control/: drive.py  navsat_init.py  steering.py
src/description/description/: CMakeLists.txt  package.xml
src/description/description/launch/: display.launch.py  robot_description.launch.py
src/description/description/urdf/: description.urdf  solbot3_steering_hinge.xacro
src/fields/test_line/: line.json
src/msgs/: CMakeLists.txt  package.xml
src/msgs/action/: DriveArc.action  RunOneLine.action  RunRsTest.action
src/navigation/controller/controller/: CMakeLists.txt  controller_plugin.xml  package.xml
src/navigation/controller/controller/include/tool_line_follower_controller/: rs_path_controller.hpp  tool_arc_follower_controller.hpp  tool_line_follower_controller.hpp  tool_rpp_controller.hpp
src/navigation/controller/controller/src/: rs_path_controller.cpp  tool_arc_follower_controller.cpp  tool_line_follower_controller.cpp  tool_rpp_controller.cpp
src/navigation/drive_arc/: CMakeLists.txt  behavior_plugin.xml  package.xml
src/navigation/drive_arc/include/drive_arc/: drive_arc_behavior.hpp  drive_arc_bt_node.hpp
src/navigation/drive_arc/src/: drive_arc_behavior.cpp  drive_arc_bt_node.cpp
src/navigation/localization/: CMakeLists.txt  package.xml
src/navigation/localization/config/: ekf_relposned_params.yaml
src/navigation/localization/launch/: ekf_relposned.launch.py
src/navigation/nav2_bringup/: CMakeLists.txt  package.xml
src/navigation/nav2_bringup/behavior_trees/: navigate_plan_once.xml
src/navigation/nav2_bringup/config/: mapviz_line.mvc  mapviz_m2.mvc  mapviz_m3.mvc  mapviz_rs_test.mvc
src/navigation/nav2_bringup/params/: nav2_params_m2.yaml  nav2_params_m3.yaml
src/navigation/nav2_bringup/scripts/: goal_marker_publisher.py  origin_publisher.py  tf_pose_publisher.py
src/navigation/one_line_nav/: CMakeLists.txt  navigator_plugins.xml  package.xml
src/navigation/one_line_nav/behavior_trees/: one_line.xml
src/navigation/one_line_nav/behavior_trees/subtrees/: approach_swath.xml  swath_nav.xml  turn_swath.xml
src/navigation/one_line_nav/include/one_line_nav/: one_line_navigator.hpp
src/navigation/one_line_nav/src/: bt_nodes.cpp  one_line_navigator.cpp
src/navigation/planner/planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/navigation/planner/planner/include/nav2_straightline_planner/: straight_line_planner.hpp
src/navigation/planner/planner/include/planner/: reeds_shepp_planner.hpp  swath_turn_planner.hpp
src/navigation/planner/planner/src/: reeds_shepp_planner.cpp  straight_line_planner.cpp  swath_turn_planner.cpp
src/navigation/rs_test_nav/: CMakeLists.txt  navigator_plugins.xml  package.xml
src/navigation/rs_test_nav/behavior_trees/: rs_test.xml
src/navigation/rs_test_nav/include/rs_test_nav/: rs_test_navigator.hpp
src/navigation/rs_test_nav/src/: bt_nodes.cpp  rs_test_navigator.cpp
src/simulation/gazebo_spawn/: CMakeLists.txt  package.xml
src/simulation/gazebo_spawn/configs/: gz_bridge.yaml
src/simulation/gazebo_spawn/launch/: m1_localization_sim.launch.py  m2_nav_sim.launch.py  m3_nav_sim.launch.py  simulation.launch.py  spawn_robot.launch.py
src/simulation/gazebo_spawn/scripts/: ackermann_cmd_vel_preprocessor.py  sim_gps_fix_publisher.py
src/simulation/gazebo_spawn/worlds/: empty.sdf
src/solbot5_control/: package.xml  setup.cfg  setup.py
src/solbot5_control/solbot5_control/: ackermann_odom.py  auto_imu_cal.py  drive.py  field_nav_logger.py  gps_to_map.py  gps_vel_odom.py  heading_drift_logger.py  heading_fuser.py  imu_bridge.py  imu_heading_calibrator.py  imu_passive_cal.py  lift_service.py  mqtt_op.py  navsat_init.py  orientation_persist.py  planter_service.py  polygon_recorder.py  steering.py  wheel_error_logger.py
src/solbot5_description/: CMakeLists.txt  package.xml
src/solbot5_description/launch/: display.launch.py  robot_description.launch.py
src/solbot5_description/rviz/: config.rviz
src/solbot5_description/urdf/: solbot5_description.urdf
src/solbot5_gazebo_spawn/: CMakeLists.txt  package.xml
src/solbot5_gazebo_spawn/configs/: solbot5_gz_bridge.yaml
src/solbot5_gazebo_spawn/launch/: m1_localization_sim.launch.py  m2_nav_sim.launch.py  m3_nav_sim.launch.py  simulation.launch.py  spawn_robot.launch.py
src/solbot5_gazebo_spawn/scripts/: sim_gps_fix_publisher.py  sim_gps_vel_odom.py  sim_relposned_publisher.py  sim_wheel_speed_publisher.py
src/solbot5_localization/: CMakeLists.txt  package.xml
src/solbot5_localization/config/: dual_ekf_navsat_params.yaml  dual_ekf_params.yaml  ekf_gps_imu_params.yaml  ekf_heading_fuser_params.yaml  ekf_odom_only_params.yaml  ekf_relposned_params.yaml
src/solbot5_localization/launch/: dual_ekf.launch.py  dual_ekf_navsat.launch.py  ekf_gps_imu.launch.py  ekf_heading_fuser.launch.py  ekf_relposned.launch.py
src/solbot5_localization/localization/: gps_roll_correction_node.py  relposned_heading.py
src/solbot5_nav2_bringup/: CMakeLists.txt
src/solbot5_nav2_bringup/behavior_trees/: navigate_plan_once.xml
src/solbot5_nav2_bringup/config/: mapviz_m3.mvc
src/solbot5_nav2_bringup/launch/: navigation.launch.py
src/solbot5_nav2_bringup/params/: nav2_params_m3.yaml
src/solbot5_planner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/solbot5_planner/include/solbot5_planner/: reeds_shepp_planner.hpp
src/solbot5_planner/src/: reeds_shepp_planner.cpp
src/ublox_dgnss/ntrip_client_node/src/: ntrip_client_node.cpp
src/ublox_dgnss/ublox_dgnss/config/: f9p_ubx_config.toml
src/ublox_dgnss/ublox_dgnss_node/include/ublox_dgnss_node/ubx/: ubx_cfg_item_map.hpp
src/ublox_dgnss/ublox_dgnss_node/src/: ublox_dgnss_node.cpp
