<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>one_line_nav</name>
  <version>0.1.0</version>
  <description>
    Nav2 BehaviorTreeNavigator plugin for single-line swath navigation.
    Takes map-frame start/end points, approaches with RS planner, follows
    with cross-track PID (ToolLineFollowerController), U-turns with RS planner.
  </description>
  <maintainer email="lkowale@gmail.com">Lukasz Kowalewski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>pluginlib</depend>
  <depend>solbot5_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nlohmann_json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
