<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner</name>
  <version>0.1.0</version>
  <description>
    Nav2 global planner plugins for solbot5.
    ReedsSheppPlanner: minimum-length Reeds-Shepp path (forward + reverse arcs
    and straights) for Ackermann robots with dual-antenna GPS heading.
  </description>
  <maintainer email="lkowale@gmail.com">Lukasz Kowalewski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
